Stable: Hyprland fixed with unified windowrules and fcitx5

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -120,7 +120,6 @@ dwindle {
 misc {
     # force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
-    disable_hyprland_qtutils_check = true
 }
 
 
@@ -130,9 +129,9 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = jp
     kb_variant =
-    kb_model =
+    kb_model = jp106
     kb_options =
     kb_rules =
 
@@ -147,7 +146,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+     # workspace_swipe = false
 }
 
 # Example per-device config
