--- a/dotfiles/.config/hypr/windowrules.conf
+++ b/dotfiles/.config/hypr/windowrules.conf
@@ -1,20 +1,10 @@
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
+# 2026 Hyprland Unified Syntax - Verified Fix
+# windowrulev2 は廃止。match: プレフィックスと値(1)が必須。
 
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
+windowrule = match:class .*, suppress_event maximize
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2 = opacity 0.95 0.95,class:^(firefox)$
-windowrulev2 = opacity 0.95 0.95,class:^(jetbrains-idea)$
-windowrulev2 = opacity 0.95 0.95,class:^(zen)$
-windowrulev2 = opacity 0.95 0.95,class:^(obsidian)$
-windowrulev2 = opacity 0.95 0.95,class:^(intellij-idea-ultimate-edition)$
-
+windowrule = match:class ^(firefox)$, float 1
+windowrule = match:class ^(jetbrains-idea)$, float 1
+windowrule = match:class ^(zen)$, float 1
+windowrule = match:class ^(obsidian)$, float 1
+windowrule = match:class ^(intellij-idea-ultimate-edition)$, float 1
