--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -8,7 +8,7 @@ monitor=,1920x1080@60,auto,1
 ### MY PROGRAMS ###
 ###################
 
-$terminal = kitty
+$terminal = alacritty
 $menu = rofi -show drun
 # $menu = wofi --show drun
 $scrPath = $HOME/.dotfiles/scripts
@@ -18,7 +18,7 @@ $scrPath = $HOME/.dotfiles/scripts
 #################
 exec-once = nm-applet &
 exec-once = fcitx5 &
-# exec-once = hyprpanel  # Removed: DMS provides panel
+# exec-once = waybar &  # Removed: DMS panel working
 # exec-once = rog-control-center
 
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
