--- a/dotfiles/.config/hypr/keybindings.conf
+++ b/dotfiles/.config/hypr/keybindings.conf
@@ -15,31 +15,43 @@ input {
 $mainMod = SUPER # windows key
 
 # assign apps
-$term = kitty
+$term = alacritty
+$term2 = ghostty
 $code = code --ozone-platform-hint=wayland --disable-gpu
 $file = thunar
 $brave = brave --ozone-platform-hint=wayland --disable-gpu
 $browser = zen
 $telegram = telegram-desktop
-$powermenu = rofi -show power-menu -modi power-menu:/home/vasu/.local/bin/rofi-power-menu
 $lock = hyprlock
+$search = dms open
 
-# Binds
+# Core Binds
 bind = $mainMod, RETURN, exec, $term
+bind = $mainMod SHIFT, RETURN, exec, $term2
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
-bind = Alt, Return, fullscreen,
+bind = $mainMod SHIFT, Q, exec, wlogout
+bind = $mainMod SHIFT CTRL, M, exit,  # Safer: require 3 keys to exit
+bind = $mainMod, F11, fullscreen, 0
+bind = $mainMod SHIFT, F11, fullscreen, 1  # Maximize
+
+# Applications
 bind = $mainMod, E, exec, $file
 bind = $mainMod, F, exec, $browser
 bind = $mainMod, B, exec, $brave
+bind = $mainMod, C, exec, $code
 bind = $mainMod, T, exec, $telegram
-bind = $mainMod, O, exec, $lock
+bind = $mainMod, G, exec, steam
+bind = $mainMod, D, exec, $search
+
+# Window Management
 bind = $mainMod, W, togglefloating,
-bind = $mainMod, A, exec, $menu
-bind = $mainMod, BACKSPACE, exec, wlogout
-bind = $mainMod, SPACE, exec, rofimoji
-# bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, P, pseudo,
+bind = $mainMod, J, togglesplit,
+bind = $mainMod, X, pin,  # Pin window to all workspaces
+bind = $mainMod SHIFT, F, fullscreen, 0
+
+# Lock & Logout
+bind = $mainMod, O, exec, $lock
 
 # Fn keys
 bind = , XF86MonBrightnessUp, exec, brightnessctl -q s +10%
@@ -72,11 +84,35 @@ bind = CTRL SHIFT, print, exec, hyprshot -m region -o ~/Pictures/Screenshots
 
 
 
-# Move focus with mainMod + arrow keys
+# Move focus (vim-style + arrows)
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
-bind = $mainMod, j, movefocus, u
-bind = $mainMod, k, movefocus, d
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
+bind = $mainMod, left, movefocus, l
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, down, movefocus, d
+
+# Move windows (vim-style + arrows)
+bind = $mainMod SHIFT, h, movewindow, l
+bind = $mainMod SHIFT, l, movewindow, r
+bind = $mainMod SHIFT, k, movewindow, u
+bind = $mainMod SHIFT, j, movewindow, d
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
+
+# Resize windows
+bind = $mainMod CTRL, h, resizeactive, -40 0
+bind = $mainMod CTRL, l, resizeactive, 40 0
+bind = $mainMod CTRL, k, resizeactive, 0 -40
+bind = $mainMod CTRL, j, resizeactive, 0 40
+bind = $mainMod CTRL, left, resizeactive, -40 0
+bind = $mainMod CTRL, right, resizeactive, 40 0
+bind = $mainMod CTRL, up, resizeactive, 0 -40
+bind = $mainMod CTRL, down, resizeactive, 0 40
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -90,17 +126,29 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+# Move window to workspace (silent)
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
+
+# Move window to workspace and follow
+bind = $mainMod ALT, 1, movetoworkspace, 1
+bind = $mainMod ALT, 2, movetoworkspace, 2
+bind = $mainMod ALT, 3, movetoworkspace, 3
+bind = $mainMod ALT, 4, movetoworkspace, 4
+bind = $mainMod ALT, 5, movetoworkspace, 5
+bind = $mainMod ALT, 6, movetoworkspace, 6
+bind = $mainMod ALT, 7, movetoworkspace, 7
+bind = $mainMod ALT, 8, movetoworkspace, 8
+bind = $mainMod ALT, 9, movetoworkspace, 9
+bind = $mainMod ALT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
