Add Git credential helper configuration
- Add credential.helper = store to .gitconfig
- Add .git-credentials to .gitignore for security
- This allows permanent GitHub authentication with token

--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -50,3 +50,6 @@
   line-numbers-right-style = cyan
   line-numbers-minus-style = 124
   line-numbers-plus-style = 28
+
+[credential]
+  helper = store
