--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -2,11 +2,11 @@
 ### MONITORS ###
 ################
 
-# Dell SE2417HGX (HDMI-A-3) - 75Hz
-monitor=HDMI-A-3,1920x1080@74.97,0x0,1
+# Dell SE2417HGX (HDMI-A-1) - 75Hz
+monitor=HDMI-A-1,1920x1080@74.97,0x0,1
 
-# BNQ ZOWIE XL LCD (DP-4) - 144Hz Gaming Monitor
-monitor=DP-4,1920x1080@143.98,1920x0,1
+# BNQ ZOWIE XL LCD (DP-2) - 144Hz Gaming Monitor
+monitor=DP-2,1920x1080@143.98,1920x0,1
 
 # Fallback for any other monitors
 monitor=,preferred,auto,1
@@ -16,18 +16,18 @@ monitor=,preferred,auto,1
 ###################
 
 # Bind workspaces to specific monitors
-# WS1-6: Left monitor (Dell/HDMI-A-3) for general use
-workspace = 1, monitor:HDMI-A-3, default:true
-workspace = 2, monitor:HDMI-A-3
-workspace = 3, monitor:HDMI-A-3
-workspace = 4, monitor:HDMI-A-3
-workspace = 5, monitor:HDMI-A-3
-workspace = 6, monitor:HDMI-A-3
+# WS1-6: Left monitor (Dell/HDMI-A-1) for general use
+workspace = 1, monitor:HDMI-A-1, default:true
+workspace = 2, monitor:HDMI-A-1
+workspace = 3, monitor:HDMI-A-1
+workspace = 4, monitor:HDMI-A-1
+workspace = 5, monitor:HDMI-A-1
+workspace = 6, monitor:HDMI-A-1
 
-# WS7-9: Right monitor (ZOWIE/DP-4) for gaming
-workspace = 7, monitor:DP-4
-workspace = 8, monitor:DP-4
-workspace = 9, monitor:DP-4
+# WS7-9: Right monitor (ZOWIE/DP-2) for gaming
+workspace = 7, monitor:DP-2
+workspace = 8, monitor:DP-2
+workspace = 9, monitor:DP-2
 
 ###################
 ### MY PROGRAMS ###
@@ -88,8 +88,9 @@ general {
     # border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    # col.inactive_border = rgba(595959aa)
+    # Colored border for active windows (Glass-morphism)
+    col.active_border = rgba(235,111,146,0.8) rgba(196,167,231,0.8) 45deg
+    col.inactive_border = rgba(57,53,82,0.5)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -104,17 +105,18 @@ general {
 decoration {
     rounding = 10
 
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    # Glass-morphism transparency (subtle - just slightly transparent)
+    active_opacity = 0.95
+    inactive_opacity = 0.92
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
-
-        vibrancy = 0.1696
+        size = 8
+        passes = 3
+        vibrancy = 0.25
+        vibrancy_darkness = 0.7
+        noise = 0.01
     }
 }
 
