--- a/dotfiles/.config/hypr/keybindings.conf
+++ b/dotfiles/.config/hypr/keybindings.conf
@@ -23,7 +23,7 @@ $brave = brave --ozone-platform-hint=wayland --disable-gpu
 $browser = zen
 $telegram = telegram-desktop
 $lock = hyprlock
-$search = wofi --show drun
+$search = wofi --style /home/mirin/rudra/config/wofi/style.css --show drun
 
 # Core Binds
 bind = $mainMod, RETURN, exec, ghostty  # シンプルにGhostty起動
@@ -101,6 +101,11 @@ bind = CTRL SHIFT, print, exec, sh -c 'FILE=~/Pictures/Screenshots/Screenshot-$(
 
 # Alt+Print: アクティブウィンドウのスクリーンショット → クリップボード & 保存
 bind = ALT, print, exec, sh -c 'grim -g "$(hyprctl activewindow -j | jq -r "\"\\(.at[0]),\\(.at[1]) \\(.size[0])x\\(.size[1])\"")" - | tee ~/Pictures/Screenshots/Screenshot-$(date +%F_%T).png | wl-copy && dunstify "ウィンドウのスクリーンショットを撮りました" -t 1000'
+
+# Screen Recording / 画面録画
+bind = $mainMod, R, exec, /home/mirin/rudra/dotfiles/.config/hypr/scripts/record-screen.sh  # 領域録画 / Region
+bind = $mainMod SHIFT, R, exec, /home/mirin/rudra/dotfiles/.config/hypr/scripts/stop-recording.sh  # 停止 / Stop
+bind = $mainMod SHIFT, I, exec, /home/mirin/rudra/dotfiles/.config/hypr/scripts/record-fullscreen.sh  # 全画面 / Fullscreen
 
 
 
