--- a/dotfiles/.config/hypr/windowrules.conf
+++ b/dotfiles/.config/hypr/windowrules.conf
@@ -129,7 +129,42 @@ windowrule = match:title ^(.*Counter-Strike.*)$, immediate on
 windowrule = match:title ^(.*Dota 2.*)$, immediate on
 
 # CS2 specific optimizations
-windowrule = match:title:^(.*Counter-Strike 2.*)$, immediate 1, animation none, xray 1
+windowrule = match:title ^(.*Counter-Strike 2.*)$, immediate on, animation none, xray on
+
+# ===============================
+# Performance: Exclude blur from games
+# ===============================
+# Note: noblur syntax changed in Hyprland 0.53+
+# Using alternative: set opaque windows for games instead
+windowrule {
+    name = opaque-steam
+    match:class = ^(steam)$
+    opacity = 1.0
+}
+
+windowrule {
+    name = opaque-steam-games
+    match:class = ^(steam_app.*)$
+    opacity = 1.0
+}
+
+windowrule {
+    name = opaque-cs2
+    match:class = ^(cs2)$
+    opacity = 1.0
+}
+
+windowrule {
+    name = opaque-gamescope
+    match:class = ^(gamescope)$
+    opacity = 1.0
+}
+
+windowrule {
+    name = opaque-minecraft
+    match:class = ^(minecraft)$
+    opacity = 1.0
+}
 
 # ===============================
 # NOTE: idleinhibit removed in 0.53
