--- a/dotfiles/.config/ghostty/config
+++ b/dotfiles/.config/ghostty/config
@@ -3,7 +3,7 @@
 # ==========================================
 
 # Font
-font-family = JetBrainsMono Nerd Font
+font-family = Noto Sans Mono CJK JP
 font-size = 18
 
 # Theme - Using built-in theme instead of rose-pine
@@ -40,7 +40,8 @@ confirm-close-surface = false
 
 # Environment
 env = TERM=xterm-256color
-env = LANG=en_US.UTF-8
+env = LANG=ja_JP.UTF-8
+env = LC_ALL=ja_JP.UTF-8
 
 # Performance optimizations
 gpu-acceleration = true
