--- a/dotfiles/.config/ghostty/config
+++ b/dotfiles/.config/ghostty/config
@@ -2,8 +2,8 @@
 # Ghostty Configuration
 # ==========================================
 
-# Font
-font-family = Noto Sans Mono CJK JP
+# Font - JetBrains Mono for programming
+font-family = JetBrainsMono Nerd Font
 font-size = 18
 
 # Theme - Using built-in theme instead of rose-pine
@@ -40,8 +40,7 @@ confirm-close-surface = false
 
 # Environment
 env = TERM=xterm-256color
-env = LANG=ja_JP.UTF-8
-env = LC_ALL=ja_JP.UTF-8
+env = LANG=en_US.UTF-8
 
 # Performance optimizations
 gpu-acceleration = true
